Split core and functions Added functionality for running functions on player_login Cleanup

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,1 +1,3 @@
-CombatTooltip now only hides Unit mouseovers.
+Fixed camera distance set cvar on player login.
+Added slash command /rl to Reload UI.
+Moved functions to own lua file.
