--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,22 +1,5 @@
-Fixed camera distance set cvar on player login.
+--moetQOL v2.6.1
 
-Added slash command /rl to Reload UI.
+Moved HideBlizzardBorders and UI specific stuff into new moetUI addon.
 
-Moved functions to own lua file.
-Added functionality to add custom options to functions.
-
-Now cleans up unsupported keys in DB when running /mq flags
-
-Added functionality for printing flags of certain state:
-- '/mq flags on' prints all functions that are on
-- '/mq flags off' prints all functions that are off
-
-Added CombatTooltip custom options:
-- normal, always hide unit tooltips in combat
-- moderate, hide unit tooltips in combat if in an instance
-- strict, hide unit tooltips in combat only if in instance and raid
-
-Added DynamicSpellqueue which automatically changes the SpellQueueWindow
-baesd on ranged or melee. Melee is set to 125, ranged value can be supplied.
-
-Added Manual/Auto custom options to Sell Greys
+Fixed skipmovies option.
