--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,9 @@
+--moetQOL v3.0.0
+Added a new config UI. Open by typing /mq
+Removed most slash command interaction with the addon
+Added /pin x y slash command to create map pins.
+Added /pinshare x y slash command to create map pin and share link in raid else party else say.
+
 --moetQOL v2.6.11
 
 Fixed issue with quest item bind unable to set keybind in combat.
