--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,2 +1,3 @@
---moetQOL v3.1.0
-Fixed changed templates for 10.0
+--moetQOL v3.2.0
+War Within Pre patch fixes
+Removed paragontooltip option due to blizzard ui and api changes
