--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,4 @@
---moetQOL v3.2.0
-War Within Pre patch fixes
+--moetQOL v3.2.5
+War within version
 Removed paragontooltip option due to blizzard ui and api changes
+All gossip and auto quest stuff for war within
